# rgbd_calibration

./: CMakeLists.txt  package.xml
config/: rgbd_calibration.txt
launch/: calibrate.launch  depth_registration.launch  ir_get_images.launch  rgb_get_images.launch
src/: calibrate.cpp  get_calibration_images.cpp  rgb_depth_registration.cpp
visualization/: rgb_depth_registration.rviz
